# biotac_gazebo_plugin

./: README.md
sim_biotac/: CMakeLists.txt  package.xml
sim_biotac/include/sim_biotac/: neural_network.h  sim_biotac.h
sim_biotac/scripts/: set_default_model
sim_biotac/src/: sim_biotac.cpp
sim_biotac_motorhand/: CMakeLists.txt  package.xml
sim_biotac_motorhand/launch/: hand.rviz  hand_rviz.launch  sim_biotac_motorhand_1.launch  sim_biotac_motorhand_2.launch  touch.rviz  ur5_left_sh_hand.launch  ur5_motorhand.launch
sim_biotac_motorhand/robots/: sim_biotac_motorhand_1.urdf.xacro  sim_biotac_motorhand_2.urdf.xacro  ur5_sim_biotac_motorhand.urdf.xacro
sim_biotac_motorhand/scripts/: move_finger_1  move_finger_2
sim_biotac_motorhand/src/: three_pod_grasp.cpp
sim_biotac_motorhand/worlds/: empty.world  grasp.world
sim_biotac_train/: CMakeLists.txt  package.xml
sim_biotac_train/scripts/: sim_biotac_train_network
sim_biotac_train/src/: sim_biotac_train_adjust.cpp  sim_biotac_train_extract.cpp
