<package>
    
    <name>sim_biotac</name>
    <version>1.0.0</version>

    <description>
        Data-driven simulation of the BioTac touch sensors using artificial neural networks
    </description>

    <maintainer email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</maintainer>
    <author email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</author>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>eigen_conversions</build_depend>
    <build_depend>sr_robot_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>eigen_conversions</run_depend>
    <run_depend>sr_robot_msgs</run_depend>
    
</package>
