<?xml version="1.0"?>
<package>
    
  <name>sim_biotac_motorhand</name>
  <version>0.0.0</version>
  <description>Examples for the BioTac simulation plug-in (sim_biotac)</description>

  <maintainer email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</maintainer>
  <author email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</author>
  <author email="jonetzko@informatik.uni-hamburg.de">Yannick Jonetzko</author>

  <license>...</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>sr_robot_msgs</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>sr_robot_msgs</run_depend>

  <export>
  </export>
  
</package>
