<package>
    
    <name>sim_biotac_train</name>
    <version>1.0.0</version>

    <description>
        Tools for training sim_biotac
    </description>

    <maintainer email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</maintainer>
    <author email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</author>

    <license>...</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>eigen_conversions</build_depend>
    <build_depend>apriltags</build_depend>
    <build_depend>rosbag</build_depend>
    <build_depend>kdl_conversions</build_depend>
    <build_depend>sr_robot_msgs</build_depend>
    <build_depend>sim_biotac</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_srvs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>eigen_conversions</run_depend>
    <run_depend>apriltags</run_depend>
    <run_depend>rosbag</run_depend>
    <run_depend>kdl_conversions</run_depend>
    <run_depend>sr_robot_msgs</run_depend>
    <run_depend>sim_biotac</run_depend>
    
</package>
